[gd_scene load_steps=4 format=3 uid="uid://b214xbcbjfo60"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_3e030"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y7a8y"]
content_margin_left = 400.0
content_margin_top = 400.0
content_margin_right = 400.0
content_margin_bottom = 400.0

[sub_resource type="LabelSettings" id="LabelSettings_3c71g"]
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3e030")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 1254.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_y7a8y")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Whatever your game is called"
label_settings = SubResource("LabelSettings_3c71g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BT_Play" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Play"

[node name="BT_Options" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="BT_Credits" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Credits
"

[node name="BT_Quit" type="Button" parent="Panel/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/BT_Play" to="." method="_on_bt_play_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/BT_Options" to="." method="_on_bt_options_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/BT_Credits" to="." method="_on_bt_credits_pressed"]
[connection signal="pressed" from="Panel/PanelContainer/VBoxContainer/BT_Quit" to="." method="_on_bt_quit_pressed"]
